# awscdk-demo

./: .gitignore  README.md  app.py  deployment.py  pyproject.toml  requirements.txt
api/: infra.py
api/runtime_chalice/: app.py  requirements.txt
api/runtime_chalice/.chalice/: config.json
api/runtime_chalice/chalicelib/: __init__.py
api/runtime_nochalice/: chars.py  helpers.py  lambda_function.py
db/: infra.py
